--- a/index.html
+++ b/index.html
@@ -7,20 +7,11 @@
     <link rel="stylesheet" href="styleheader.css">
 </head>
 <body>
-    <div class='main-tool-bar'>Header</div>
-    <div id="smooth-wrapper">
-      <div id="smooth-content">
-        <header class="header">
-          <h1 class="title">ScrollSmoother</h1>
-          <button class="button">Jump to C</button>
-        </header>
-        <div class="box box-a" data-speed="clamp(0.5)">a</div>
-        <div class="box box-b" data-speed="clamp(0.8)">b</div>
-        <div class="box box-c" data-speed="1.5">c</div>
-        <div class="line"></div>
-      </div>
-    </div>
-
+  <header>
+  Header – Slide up on scroll down, slide down on scroll up
+  </header>
+  
+  
 <script src="scriptheader.js"></script>   
 </body>
 </html>
